plan table as dialog and grade and progress for each student in subgroup

--- a/assets/general.sass
+++ b/assets/general.sass
@@ -1,2 +1,7 @@
 *
     font-family: $primary_font_family !important
+
+@media (max-width: 600px)
+    .col-xs-12
+        flex: 0 0 100%
+        max-width: 100%
